[gd_scene load_steps=17 format=3 uid="uid://g607at54b8k2"]

[ext_resource type="Script" path="res://scenes/playstate/PlayState.gd" id="1_eywoe"]
[ext_resource type="PackedScene" uid="uid://dkc78o5xt0g1p" path="res://objects/noteShit/Strumline.tscn" id="2_16luq"]
[ext_resource type="LabelSettings" uid="uid://fxutikh0tgan" path="res://assets/fonts/vcr-large.tres" id="3_3o814"]
[ext_resource type="Script" path="res://scenes/playstate/NoteGroup.gd" id="4_qoe8d"]
[ext_resource type="FontFile" uid="uid://cmisj8l6ni57l" path="res://assets/fonts/vcr.ttf" id="5_82f0k"]
[ext_resource type="Theme" uid="uid://cnnfjplhfl3ld" path="res://assets/bar-theme.tres" id="6_exjub"]
[ext_resource type="Texture2D" uid="uid://bncs1h5y8i3gd" path="res://healthBar.png" id="7_e5u3m"]
[ext_resource type="Script" path="res://scenes/playstate/Character.gd" id="8_r7dtf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_66gyo"]
bg_color = Color(0, 0, 0, 0.6)
border_color = Color(0.8, 0.8, 0.8, 0.0980392)
corner_detail = 1

[sub_resource type="LabelSettings" id="LabelSettings_euiry"]
font = ExtResource("5_82f0k")
font_size = 18
outline_size = 6
outline_color = Color(0, 0, 0, 1)
shadow_size = 4

[sub_resource type="Animation" id="Animation_xo3rw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:label_settings:font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_qenkh"]
resource_name = "boing"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:label_settings:font_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [19, 18]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dsrm7"]
_data = {
"RESET": SubResource("Animation_xo3rw"),
"boing": SubResource("Animation_qenkh")
}

[sub_resource type="LabelSettings" id="LabelSettings_cfpbh"]
font = ExtResource("5_82f0k")
outline_size = 6
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_33cjh"]
bg_color = Color(0, 1, 0, 1)
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_spa2o"]
bg_color = Color(1, 0, 0, 1)
border_color = Color(0, 0, 0, 1)

[node name="PlayState" type="Node2D"]
script = ExtResource("1_eywoe")

[node name="CamHUD" type="CanvasLayer" parent="."]

[node name="ScoreTxt" type="Label" parent="CamHUD"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -44.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_66gyo")
text = "ACCURACY: 100% || Score: 100000 || MISSES: 0"
label_settings = SubResource("LabelSettings_euiry")
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CamHUD/ScoreTxt"]
libraries = {
"": SubResource("AnimationLibrary_dsrm7")
}

[node name="BFStrums" parent="CamHUD" instance=ExtResource("2_16luq")]
position = Vector2(800, 620)
scale = Vector2(1, 1)

[node name="DadStrums" parent="CamHUD" instance=ExtResource("2_16luq")]
position = Vector2(130, 620)
scale = Vector2(1, 1)

[node name="SongDisplay" type="Label" parent="CamHUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -118.0
offset_right = 75.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 0
text = "GUNS
[HARD]
"
label_settings = ExtResource("3_3o814")
horizontal_alignment = 1

[node name="TimeDisplay" type="Label" parent="CamHUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -60.0
offset_right = 75.0
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 0
text = "1:00 / 1:00
"
label_settings = SubResource("LabelSettings_cfpbh")
horizontal_alignment = 1

[node name="NoteGroup" type="Node2D" parent="CamHUD"]
script = ExtResource("4_qoe8d")

[node name="SongProgress" type="ProgressBar" parent="CamHUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -76.0
offset_top = -70.0
offset_right = 76.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("6_exjub")
theme_override_font_sizes/font_size = 12
value = 50.0
show_percentage = false

[node name="HealthBar" type="Sprite2D" parent="CamHUD"]
z_index = -1
position = Vector2(640.75, 61)
scale = Vector2(1.054, 1)
texture = ExtResource("7_e5u3m")

[node name="HealthBarBar (lol)" type="ProgressBar" parent="CamHUD/HealthBar"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -595.5
offset_top = -5.0
offset_right = -6.5
offset_bottom = 5.0
grow_horizontal = 2
theme = ExtResource("6_exjub")
theme_override_font_sizes/font_size = 12
theme_override_styles/background = SubResource("StyleBoxFlat_33cjh")
theme_override_styles/fill = SubResource("StyleBoxFlat_spa2o")
max_value = 2.0
value = 1.0
show_percentage = false

[node name="InstStream" type="AudioStreamPlayer" parent="."]

[node name="VoiceStream" type="AudioStreamPlayer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(634, 359)

[node name="BF" type="AnimatedSprite2D" parent="."]
position = Vector2(1015, 531)
script = ExtResource("8_r7dtf")

[node name="DAD" type="AnimatedSprite2D" parent="."]
position = Vector2(293, 544)
script = ExtResource("8_r7dtf")
